[package]
name = "crustboard"
version = "1.0.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies.rusqlite]
version = "0.32.0"
features = ["bundled"]

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread"]

[dependencies]
poise = "0.6"
rand = "0.8"
